--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -19,7 +19,7 @@
             android:id="@+id/imageView"
             android:layout_width="71dp"
             android:layout_height="62dp"
-            android:layout_marginEnd="60dp"
+            android:layout_marginEnd="80dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +31,7 @@
             android:layout_width="48dp"
             android:layout_height="52dp"
             android:layout_marginStart="10dp"
+            android:backgroundTint="#FFFFFF"
             android:contentDescription="@string/placeholder"
             android:onClick="backOnClick"
             app:layout_constraintBottom_toBottomOf="parent"
