--- a/app/src/main/res/layout/activity_logged_in.xml
+++ b/app/src/main/res/layout/activity_logged_in.xml
@@ -71,7 +71,8 @@
             android:layout_height="60dp"
             android:layout_marginTop="20dp"
             android:drawableLeft="@drawable/baseline_attach_money_24"
-            android:enabled="false"
+            android:enabled="true"
+            android:onClick="salesOnClick"
             android:text="Sales"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@+id/productsButton"
