--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.FirstJavaApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.SiomaiApp" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
         <item name="colorPrimary">@color/primary</item>
+        <item name="colorSecondary">@color/white</item>
+        <item name="colorAccent">@color/primary</item>
+
     </style>
+
+    <style name="Theme.SiomaiApp" parent="Base.Theme.SiomaiApp" />
 </resources>
