--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.FirstJavaApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.SiomaiApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorSecondary">@color/white</item>
+        <item name="colorAccent">@color/primary</item>
+
     </style>
 
-    <style name="Theme.FirstJavaApp" parent="Base.Theme.FirstJavaApp" />
+    <style name="Theme.SiomaiApp" parent="Base.Theme.SiomaiApp" />
 </resources>
